<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.aldu.studbud.MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="Study Buddy"
        android:id="@+id/headLine"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:text="@string/title_schedule_button"
        android:id="@+id/schedule_button"
        android:layout_below="@+id/headLine"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="73dp" />

    <Button
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:text="@string/title_calculator_button"
        android:id="@+id/calculator_button"
        android:layout_alignTop="@+id/schedule_button"
        android:layout_alignRight="@+id/headLine"
        android:layout_alignEnd="@+id/headLine" />

    <Button
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:text="@string/title_profile_button"
        android:id="@+id/profile_button"
        android:layout_below="@+id/schedule_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:text="@string/title_preferences_button"
        android:id="@+id/preferences_button"
        android:layout_below="@+id/calculator_button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
